--- a/src/gex-home.html
+++ b/src/gex-home.html
@@ -91,7 +91,7 @@
     </div>
 
     <div hidden$="[[!visibleGE]]" class="panel ge">
-      <app-toolbar class="ge">
+      <app-toolbar>
         <div main-title>GE S3</div>
         <paper-icon-button icon="my-icons:search" on-tap="handleGE"></paper-icon-button>
         <paper-icon-button icon="my-icons:close" on-tap="hideGE"></paper-icon-button>
