wip: Pacs-pull workflow.

--- a/src/pacs-pull/gex-pacs-pull.html
+++ b/src/pacs-pull/gex-pacs-pull.html
@@ -21,6 +21,11 @@
         display: flex;
         position: relative;
       }
+
+      app-toolbar {
+        margin-top: 0;
+      }
+
       iron-pages {
         display: flex;
         width: 100%;
