--- a/src/pacs-pull/gex-pacs-move.html
+++ b/src/pacs-pull/gex-pacs-move.html
@@ -17,31 +17,17 @@
       :host {
         display: flex;
         width: 100%;
+        /*24+24+64+20+56+24*/
+        height: calc(100vh - 212px);
       }
 
       .container {
-        display: flex;
+        display: block;
         flex-direction: column;
         width: 840px;
         margin-left: auto;
         margin-right: auto;
-        background-color: #ffffff;
-      }
-
-      /*.container {
-        position: absolute;
-        top:0;
-        bottom:0;
-        right:0;
-        left:0;
-        background-color: #123456;
-        display: flex;
-        flex-direction: column;
-      }*/
-
-      vaadin-grid {
-        flex: 1;
-        min-height: 256px;
+        height: calc(100vh - 212px);
       }
 
       .action {
@@ -63,7 +49,13 @@
 
   <div class="container">
 
-    <vaadin-grid id="grid" aria-label="Basic Binding Example" multi-sort="true" items="[[data]]" selected-items="{{selection}}">
+    <vaadin-grid
+      id="grid"
+      aria-label="Basic Binding Example"
+      multi-sort="true"
+      items="[[data]]"
+      selected-items="{{selection}}"
+      style="height: calc(100% - 40px);">
 
       <vaadin-grid-selection-column id="selectionColumn" auto-select>
       </vaadin-grid-selection-column>
