WIP: Pacs pull workflow

--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --light-primary-color:      #9e9e9e;
         --text-primary-color:       #FFFFFF;
         --accent-color:             #CCFF00;
-        --primary-background-color: #BBDEFB;
+        --primary-background-color: #FAFAFA;
         --primary-text-color:       #212121;
         --secondary-text-color:     #757575;
         --disabled-text-color:      #BDBDBD;
