--- a/src/pacs-pull/gex-pacs-move.html
+++ b/src/pacs-pull/gex-pacs-move.html
@@ -137,6 +137,7 @@
           selection: {
             type: Array,
             value: [],
+            notify: true,
           },
           settings: {
             type: Object,
