--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -88,7 +88,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         tail="{{subroute}}"></app-route>
 
     <!-- PACS pull dialog -->
-    <gex-pacs-pull id="PACSPull"></gex-pacs-pull>
+    <gex-pacs-pull id="PACSPull" on-fetch-data="_handleFetchData"></gex-pacs-pull>
 
     <!-- Main content -->
     <app-header-layout has-scrolling-region>
@@ -138,7 +138,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           login: {
             type: Boolean,
             observer: '_loginChanged',
-          }
+          },
+          feedId: {
+            type: String,
+            value: '',
+          },
+          pluginInstance: {
+            type: String,
+            value: '',
+          },
         };
       }
 
@@ -222,6 +230,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           }
           this.$.PACSPull.fetchPlugins();
         }
+      }
+
+      _handleFetchData(event) {
+        const detail = event.detail;
+        this.feedId = detail.feedId;
+        this.pluginInstance = detail.pluginInstance;
+
+        // wait for plugin instance to finish
+        // fetch files
+        // pass files to "home"
+        // order files
       }
     }
 
