--- a/src/pacs-pull/gex-pacs-query.html
+++ b/src/pacs-pull/gex-pacs-query.html
@@ -177,6 +177,11 @@
             type: Boolean,
             value: true,
             observer: '_transitioningChanged',
+          },
+          feedId: {
+            type: String,
+            value: '',
+            notify: true,
           }
         };
       }
@@ -246,8 +251,9 @@
         // ready to start the query sequence!
         const start = this.__startPlugin(this.$.API, this.target, data);
         start.then((response) => {
-            console.log(response);
             this.instance = Number(response.data[0].data.id);
+            const regexp = /\d+/gi;
+            this.feedId = response.data[0].links.feed.match(regexp)[0];
             this.push('loadingSteps', 'Contacting the PACS Server...');
             return response;
           })
@@ -317,7 +323,6 @@
       }
 
       _handleQueryError(error) {
-        console.log(error);
         this.loading = false;
         this.loadingSteps = [];
 
